# advent_of_code

./: pyproject.toml
2020/day1/: day1.py
2020/day10/: tests.py
2020/day11/: day11.py  tests.py
2020/day12/: tests.py
2020/day13/: day13.py
2020/day14/: tests.py
2020/day15/: day15.py  tests.py
2020/day16/: tests.py
2020/day17/: day17.py  tests.py
2020/day3/: day3.py
2020/day4/: day4.py  tests.py
2020/day5/: tests.py
2020/day6/: day6.py
2020/day9/: day9.py  tests.py
2021/day1/: challenge.py  tests.py
2021/day10/: challenge.py  tests.py
2021/day11/: challenge.py  tests.py
2021/day12/: challenge.py  tests.py
2021/day13/: challenge.py  tests.py
2021/day2/: challenge.py  tests.py
2021/day3/: challenge.py  tests.py
2021/day4/: challenge.py  tests.py
2021/day5/: challenge.py  tests.py
2021/day6/: challenge.py  tests.py
2021/day7/: challenge.py  tests.py
2021/day8/: challenge.py  tests.py
2021/day9/: challenge.py  tests.py
day10/: day10.py
day11/: day11.py
day12/: day12.py
day13/: day13.py  tests.py
day14/: day14.py
day16/: day16.py
day2/: day2.py
day3/: day3.py
day4/: day4.py
day5/: day5.py  tests.py
day6/: tests.py
day7/: day7.py  tests.py
day8/: day8.py  tests.py
day_template/: challenge.py  tests.py
