[tool.poetry]
name = "advent_of_code"
version = "0.1.0"
description = ""
authors = ["lgelmi <lorenzo.gelmi@prima.it>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
